@@ -1,6 +1,8 @@
 2003-03-14  Martin Willers <willers@xm-arts.de>
 	- added "Configure event" button for quick access to kcontrol
-	(patch provided by Daniel Teske)
+	- some internal tidying and cleanups
+	- using convenience class TeaListItem instead of QListViewItem
+	(patches provided by Daniel Teske)
 
 2003-03-07  (external)
 	- Implement place holder for tea sort like requested in #54551
